--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 # adass
 
 <!-- badges: start -->
-[![R build status](https://github.com/unina-sfere/adass/workflows/R-CMD-check/badge.svg)](https://github.com/unina-sfere/adass/actions)
+![R build status](https://github.com/unina-sfere/adass/workflows/R-CMD-check/badge.svg)
 <!-- badges: end -->
 
 The package  **adass** implements the adaptive smoothing spline (AdaSS) estimator for the function-on-function linear regression model proposed by Centofanti et al. (2020).
